--- a/slides/tex-files/background-techskills.tex
+++ b/slides/tex-files/background-techskills.tex
@@ -15,7 +15,7 @@ EDUCATION
 	\item M.Sc. in Digital Signal Processing \\
 	INAOE, M\'exico (2004 - 2006)
 	\item B.Eng. in Electronics \\
-	Puebla Institute of Technology, M\'exico (1999 - 2004)
+	Puebla Institute of Technology, M\'exico (1999-2004)
 \end{itemize}
 
 EXPERIENCE 
