--- a/slides/tex-files/conclusions.tex
+++ b/slides/tex-files/conclusions.tex
@@ -3,16 +3,24 @@
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
-\begin{frame}{Conclusions}
+\begin{frame}{Concluding Remarks}
 
 \begin{itemize}
-	\item Measurements of Entropy using RQA appear
-	to be robust to real-word data (i.e. different time series
-	structures, window length size and levels of smoothness )
-	\item 3D surfaces of RQA are independent of either
-	the type series or the selection of parameters.
-	\item First open access thesis with data and code 
-	for its replication. 
+	\item What to quantify in movement variability? \\
+	\textit{Complexity based on the degrees of freedom of a person,
+	to perform a task in defined environment}
+
+	\item Which methods of nonlinear analysis are appropriate to quantify movement and
+	How methods of nonlinear analysis are affected by real-world time series data ?\\
+	\textit{Measurements of Entropy using 3D surface plots of RQA 
+	appear to be robust to real-word data (i.e. different time series
+	structures, window length size and levels of smoothness )}
+%	\url{https://arxiv.org/abs/1810.09249}}
+
+	\item What are these techniques good for?\\
+	\textit{Quantification of skill learning, 
+	fetal behavioral development, or
+	nonlinear biomedical signal processing.}
 \end{itemize}
 
 %\badge{/badge/badge_v00}
