--- a/slides/tex-files/phd.tex
+++ b/slides/tex-files/phd.tex
@@ -6,7 +6,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
 \paper{
-Xochicale 2018 in {\bf Preprint PhD thesis (Zenodo)}
+Xochicale 2019 in {\bf PhD thesis}
 }
 \begin{frame}{Thesis Outline}
     \begin{figure}
@@ -23,14 +23,15 @@ Xochicale 2018 in {\bf Preprint PhD thesis (Zenodo)}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
 \paper{
-Davids et al. 2003 in {\bf Sport Medicine}; 
-Newell et al. 2001 in {\bf Hum Mov Sci}
+Bernstein 1967 in \textbf{The co-ordination and regulation of movements};
+Newell and Vaillancourt 2001 in \textbf{Hum Mov Sci};
+Davids et al. 2003 in \textbf{Sport Medicine}  
 %Xochicale 2018 in {\bf Preprint PhD thesis (Zenodo)}
 }
 \begin{frame}{Modelling Movement Variability}
     \begin{figure}
-        \includegraphicscopyright[width=0.9\linewidth]{phd/davids2002/fig1}{}
-	\caption{Newell's model of variability of physical performances} 
+        \includegraphicscopyright[width=1.0\linewidth]{phd/davids2002/drawing}{}
+	\caption{Newell's model of movement constrains} 
    \end{figure}
 \end{frame}
 }
@@ -42,8 +43,9 @@ Newell et al. 2001 in {\bf Hum Mov Sci}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
 \paper{
-Stergiou et al. 2006 in {\bf Neurologic Physical Therapy} 
-Stergiou and Decker 2011 in {\bf Human Movement Science}}
+Stergiou et al. 2006 in \textbf{Neurologic Physical Therapy}; 
+Stergiou and Decker 2011 in \textbf{Human Movement Science}
+}
 \begin{frame}{Modelling Movement Variability}
     \begin{figure}
         \includegraphicscopyright[width=0.9\linewidth]{phd/stergiou2006/drawing}{}
@@ -61,17 +63,12 @@ Stergiou and Decker 2011 in {\bf Human Movement Science}}
 {
 {
 \paper{
-Xochicale 2018 in {\bf Preprint PhD thesis (Zenodo)}
+Xochicale 2019 in {\bf PhD thesis}
 }
-\begin{frame}{Nonlinear Analysis}
+\begin{frame}{Methods of Nonlinear Analysis to quantify MV}
 
 %Entropy measures to quantify regularity and complexity of time series.
 %"Is there a best tool to measure variability?" (Caballero et al. 2014, p. 67)
-
-There is no best tool to measure MV and unification of tools is still
-an open question (Caballero et al. 2014; Wijnants et al. 2009)
-which led me (i) to explore different nonlinear analyses 
-to measure MV and (ii) to understand their strengths and weaknesses. 
 
 \begin{itemize}
 	\item Approximate Entropy (Pincus 1991, 1995)
@@ -85,6 +82,11 @@ to measure MV and (ii) to understand their strengths and weaknesses.
 
 \end{itemize}
 
+There is no best tool to measure MV and unification of tools is still
+an open question (Caballero et al. 2014; Wijnants et al. 2009)
+which led me 
+\bf{(i) to explore different methods of nonlinear analyses to quantify MV} and  
+\bf{(ii) to understand their strengths and weaknesses}. 
 
 \end{frame}
 }
@@ -105,8 +107,8 @@ Eckmann et al. 1987 in {\bf Europhysics Letters}
 
 \begin{frame}{Nonlinear Analysis}
     \begin{figure}
-        \includegraphicscopyright[width=1.1\linewidth]{phd/nonlinear-analyses/main-method}
-	{Figure is adapted from Xochicale 2018 in Preprint PhD thesis (Zenodo).} 
+        \includegraphicscopyright[width=1.0\linewidth]{phd/nonlinear-analyses/main-method}
+	{Figure is adapted from Xochicale 2019 in PhD thesis.} 
 	%\caption{Figure adapted from (Casdagli et al. 1991; Quintana-Duque (2012); Uzal et al. 2011)} 
    \end{figure}
 	
@@ -119,7 +121,7 @@ Eckmann et al. 1987 in {\bf Europhysics Letters}
 \subsection{}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
-\paper{Xochicale 2018 in {\bf Preprint Ph.D dissertation (Zenodo)} }
+\paper{Xochicale 2019 in {\bf PhD thesis} }
 
 \begin{frame}{Human-Humanoid Imitation Activities}
 
@@ -145,13 +147,38 @@ simple arm horizontal and vertical movements from an humanoid.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
 \paper{
-Xochicale 2018 in {\bf Preprint PhD thesis (Zenodo)}
+Xochicale 2019 in {\bf PhD thesis}
 }
 
-\begin{frame}{Results: 3D RQA entropies}
+\begin{frame}{3D surface plots of RQA of Shannon entropy}
     \begin{figure}
         %\centering
-        \includegraphicscopyright[width=0.9\linewidth]{phd/results/3dentropies}{}
+        %\includegraphicscopyright[width=0.9\linewidth]{phd/results/3dentropies}{}
+        \includegraphicscopyright[width=1.0\linewidth]{phd/results/summary}{}
+	%{Figure is adapted from Xochicale 2019 in PhD thesis.} 
+	%\caption{(A) Normalised, (B) \textt{sgolay(p=5,n=25)}, and (C) \textt{sgolay(p=5,n=159)} } 
+   \end{figure}
+	
+\end{frame}
+}
+
+
+
+
+\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+{
+\paper{
+Zia et al., 2017 in {\bf Computer Assisted Radiology and Surgery};
+Mori 2012 in {\bf Development and Learning and Epigenetic Robotics};
+Mitsukura et al., 2017 in {\bf Electroencephalography}; 
+Marwan et al. 2019 in {\bf http://recurrence-plot.tk/}
+}
+
+\begin{frame}{Applications}
+    \begin{figure}
+        %\centering
+        \includegraphicscopyright[width=0.9\linewidth]{phd/applications/drawing}{}
 	%\caption{(A) Normalised, (B) \textt{sgolay(p=5,n=25)}, and (C) \textt{sgolay(p=5,n=159)} } 
    \end{figure}
 	
@@ -164,14 +191,13 @@ Xochicale 2018 in {\bf Preprint PhD thesis (Zenodo)}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 {
 \paper{
-Xochicale 2018 in {\bf Preprint PhD thesis (Zenodo)}
+Xochicale 2019 in {\bf PhD thesis }
 }
 
-\begin{frame}{FIRST Open Access Preprint PhD 
-		Dissertation at UoB (since 1901)}
+\begin{frame}{FIRST Open Access PhD Thesis at UoB (since 1901)}
     \begin{figure}
         %\centering
-        \includegraphicscopyright[width=1.0\linewidth]{phd/oathesis}{}
+        \includegraphicscopyright[width=1.0\linewidth]{phd/oathesis/drawing}{}
 	%\caption{(A) Normalised, (B) \textt{sgolay(p=5,n=25)}, and (C) \textt{sgolay(p=5,n=159)} } 
    \end{figure}
 	
@@ -187,433 +213,434 @@ Xochicale 2018 in {\bf Preprint PhD thesis (Zenodo)}
 {
 %\paper{}
 
-\begin{frame}{Publications}
+\begin{frame}{OA Publications}
 
 \tiny
  
-PEER-REVIEW CONFERENCE PAPERS
+\textbf{PEER-REVIEW CONFERENCE PAPERS}
 \begin{itemize}	
-	\item Towards the Analysis of Movement Variability in Human-Humanoid Imitation Activities 
+	\item \textit{Towards the Analysis of Movement Variability in Human-Humanoid Imitation Activities} 
 	(HAI2017) 
-	\item Towards the Quantification of Human-Robot Imitation Using Wearable Inertial Sensors (HRI2017)
-	\item Analysis of the Movement Variability in Dance Activities using Wearable Sensors (WeRob2016)
-	\item Understanding Movement Variability of Simplistic Gestures Using an Inertial Sensor (PerDis2016)
+	\item \textit{Towards the Quantification of Human-Robot Imitation Using Wearable Inertial Sensors} (HRI2017)
+	\item \textit{Analysis of the Movement Variability in Dance Activities using Wearable Sensors} (WeRob2016)
+	\item \textit{Understanding Movement Variability of Simplistic Gestures Using an Inertial Sensor} (PerDis2016)
 \end{itemize}
 
-PREPRINTS 
+\textbf{PREPRINTS \& in preparation}
 \begin{itemize}	
-	\item Strengths and weaknesses of Recurrence Quantification Analysis in the context of human-humanoid interaction
-	(ArXiv, October 2018)
+	\item \textit{Strengths and weaknesses of Recurrence Quantification Analysis in the context of human-humanoid interaction}
+	(ArXiv, October 2018) for Scientific Reports.
+	\item \textit{3D surface plots of RQA Shannon Entropy} \\
+ 	for Frontiers in Applied Mathematics and Statistics.
 \end{itemize}
 
-TALKS 
+\textbf{TALKS}
 \begin{itemize}	
-	\item Quantifying the Inherent Chaos of Human Movement Variability \\
+	\item \textit{Quantifying the Inherent Chaos of Human Movement Variability} \\
 	15th Experimental Chaos and Complexity Conference 
-	\item Towards the Analysis of Movement Variability for Facial Expressions with
-	Nonlinear Dynamics \\
+	\item \textit{Towards the Analysis of Movement Variability for Facial Expressions with
+	Nonlinear Dynamics} \\
 	The 7th Consortium of European Research on Emotion Conference 
 \end{itemize}
-
 
 	
 \end{frame}
 }
 
 
-
-% PUBLICATIONS
-
-%Accepted Conferences Publications
 %
-
-
-%\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{
-%Xochicale et al. 2018 in {\bf Poster Conferences at University of Birmingham} 
-%}
-%\begin{frame}{Quantifying Emotion and Movement Variability in HRI}
-%    \begin{figure}
-%        \includegraphicscopyright[width=1.0\linewidth]{experiment/emov}{}
-%   \end{figure}
-%\end{frame}
-%}
-%
-%
-
-
-%\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{Takens 1981 in {\bf Dynamical Systems and Turbulence}; 
-%Casdagli 1991 in {\bf Physica D};
-%Frank et al. 2010 in {\bf AAAI Conference on Artificial Intelligence};
-%Sama et al. 2013 in {\bf Neurocomputing};
-%Cao 1997 in {\bf Physica D};
-%Kabiraj et al. 2012 in {\bf Chaos};
-%Eckmann et al. 1987 in {\bf Europhysics Letters}
-%}
-%
-%\begin{frame}{Recurrence Quantification Analysis}
-%    \begin{figure}
-%        \includegraphicscopyright[width=1.2\linewidth]{nonlinear-analyses/main-method}
-%	{Figure is adapted from Xochicale 2018 in Preprint PhD thesis.} 
-%	%\caption{Figure adapted from (Casdagli et al. 1991; Quintana-Duque (2012); Uzal et al. 2011)} 
-%   \end{figure}
-%	
-%\end{frame}
-%}
-%
-
-
-%
-%\subsection{SSRT and UTDE}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{Takens F 1981 in {\bf Dynamical Systems and Turbulence}; Casdagli 1991 in {\bf Physica D}}
-%
-%\begin{frame}{Takens's Theorem}
-%
-%\LARGE
-%%%********************************[EQUATION]************************************
-%\begin{equation*}\label{eq:measurement}
-%	s(t)= f^{t}[ s(0) ]
-%	%x(t)=h[ f^{t}s(0)  ]
-%\end{equation*}
-%%%********************************[EQUATION]************************************
-%%\vspace{0.1mm}
-%\normalsize
-%\begin{itemize}
-%\item $s$ represents a trajectory which evolves in an unknown $d-$dimensional manifold $M$
-%\item $f^t$ is a evolution function with time evolution $t$
-%\end{itemize}
-%Then 
-%\LARGE
-%%%********************************[EQUATION]************************************
-%\begin{equation*}\label{eq:measurement}
-%	x(t)=h[s(t)]
-%\end{equation*}
-%%%********************************[EQUATION]************************************
-%%\vspace{0.1mm}
-%\normalsize
-%\begin{itemize}
-%\item $x(t)$ scalar time series in $\mathbb{R}$ 
-%\item $h$ is a function defined on the trajectory $s(t)$
-%\end{itemize}
-%
-%
-%%where $h$ is a function, $h: M \rightarrow \mathbb{R}$, defined
-%%on the evolution function $f^t$ amd
-%	
-%\end{frame}
-%}
-%
-%
-%\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{Takens F 1981 in {\bf Dynamical Systems and Turbulence}; Casdagli 1991 in {\bf Physica D}}
-%
-%\begin{frame}{State Space Reconstruction Theorem}
-%
-%Uniform time-delay embedding matrix
-%$\boldsymbol{X}(t) = \{ x(t), x(t-\tau) , ...,x(t - (m-1)\tau  ) \}$ 
-%defines a map $\Phi: M \rightarrow \mathbb{R}^m$ such that 
-%\begin{eqnarray*}
-%\boldsymbol{X}(t) = \Phi(s(t))$
-%\end{eqnarray*}
-%where $\Phi$ is a diffeomorphic map whenever $\tau > 0$ 
-%and $m > 2d_{box}$ and $d_{box}$ is the box-counting dimension of $M$.
-%
-%\end{frame}
-%}
-%
-%
-%
-%
-%\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{Frank et al. 2010 in {\bf AAAI Conference on Artificial Intelligence} and Sama et al. 2013 in {\bf Neurocomputing} }
-%
-%\begin{frame}{Uniform Time-Delay Embedding (UTDE)}
-%
-%For a given discrete time series $\{x_n\}_{n=1}^{N} = [x_1 , x_2, \dots, x_N]$
-%of sample length $N$, a uniform time-delay embedding matrix is defined as 
-%\begin{eqnarray*}
-% \mathbf{X}^{m}_{\tau}
-%  = \begin{pmatrix} \nonumber
-%      \tilde{x}_n  & \\
-%      \tilde{x}_{n-\tau}  & \\
-%      \vdots  &  \\
-%      \tilde{x}_{n-(m-1)\tau} & \\
-%      \end{pmatrix}^T
-%\end{eqnarray*}
-%where $m$ is the \textbf{embedding dimension}  and  $\tau$ is the \textbf{ embedding delay}.
-%
-%
-%The sample length for $\tilde{x}(n-i\tau)$, where $0 \leq i \leq (m-1)$, is $N-(m-1)\tau$,
-%and the dimensions of $\mathbf{X}^{m}_{\tau}$ are ($m$,$(N-(m-1)\tau)$).
-%
-%\end{frame}
-%}
-%
-%
-%\subsection{Estimation of Embedding Parameters}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{Cao L. 1997 in {\bf Physica D}; Kabiraj et al. 2012 in {\bf Chaos}}
-%
-%\begin{frame}{Estimation of Embedding Parameters }
-%
-%\begin{block}{False Nearest Neighbours (FNN) for $m$}
-%Unfold the attractor (i.e. evolving trajectories
-%in a state space).
-%\end{block}
-%
-%\begin{block}{Average Mutual Information (AMI) for $\tau$}
-%Maximize the information in the RSSs.
-%\end{block}
-%	
-%\end{frame}
-%}
-%
-%
-%
-%\subsection{FNN and AMI}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%%\paper{Xochicale M 2018, {\bf PhD thesis}}
-%
-%\begin{frame}{False Nearest Neighbours (FNN) for embedding dimension}
-%    \begin{figure}
-%        \centering
-%        \includegraphicscopyright[width=0.9\linewidth]{nonlinear-analyses/cao}{
-%	Figure is adapted from Cao L 1997 in {\bf Physica D}}
-%	\caption{(A,B) $E_1(m)$ and (C, D) $E_2(m)$ values for (E) chaotic 
-%		and (F) random time series} 
-%   \end{figure}
-%	
-%\end{frame}
-%}
-%
-%
-%
-%\subsection{Estimation of Embedding Parameters}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{Cao L. 1997 in {\bf Physica D}}
-%
-%\begin{frame}{Estimation of Embedding Parameters }
-%
-%\begin{block}{False Nearest Neighbours (FNN)}
-%\begin{equation*}
-%E(m) &= \frac{1}{N-m\tau} \sum_{i=1}^{N-m\tau} 
-%       \frac{ || \boldsymbol{X}_i(m+1) - \boldsymbol{X}_{n(i,m)}(m+1) || }
-%            { || \boldsymbol{X}_i(m) - \boldsymbol{X}_{n(i,m)}(m) ||  } 
-%\end{equation*}
-%\end{block}
-%
-%\begin{block}{ $E_1(m)$ and $E_2(m)$ }
-%\begin{equation*}
-%E_1(m) = \frac{ E(m+1) } { E(m)} \quad 
-%E_2(m) = \frac{ E^* (m+1) } { E^*(m)}
-%\end{equation*}
-%\end{block}
-%
-%
-%
-%
-%	
-%\end{frame}
-%}
-%
-%
-%
-%
-%\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%
-%\begin{frame}{Average Mutual Information (AMI) for embedding delay}
-%    \begin{figure}
-%        \centering
-%        \includegraphicscopyright[width=0.7\linewidth]{nonlinear-analyses/ami}
-%	{Figure is adapted from Kabiraj et al. 2012 in {\bf Chaos}}
-%	\caption{(A, B) AMI values for (C) chaotic and (D) noise time series.} 
-%   \end{figure}
-%	
-%\end{frame}
-%}
-%
-%
-%
-%
-%
-%\subsection{Estimation of Embedding Parameters}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{Kabiraj et al. 2012 in {\bf Chaos}}
-%
-%\begin{frame}{Estimation of Embedding Parameters }
-%
-%\begin{block}{Average Mutual Information (ANN)}
-%\begin{equation*}
-%I(\tau) = \sum_{i,j}^N p_{ij} log_2 \frac{ p_{ij} }{ p_i p_j }.
-%\end{equation*}
-%\end{block}
-%
-%\end{frame}
-%}
-%
-%
-%
-%
-%
-%\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{Eckmann et al. 1987 in {\bf Europhysics Letters}}
-%
-%\begin{frame}{Recurrence Plot}
-%    \begin{figure}
-%        \includegraphicscopyright[width=1.0\linewidth]{nonlinear-analyses/rp}
-%		{Figure is adapted from (Marwan et al. 2007)}
-%	\caption{(A) State space for Lorenz systems, and 
-%		(B) Recurrence plot with embeddings ($m=1$, $\tau=1$) and $\epsilon=5$} 
-%   \end{figure}
-%
-%\end{frame}
-%}
-%
-%
-%
-%\subsection{RP and RQA}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{Eckmann et al. 1987 in {\bf Europhysics Letters}}
-%
-%\begin{frame}{Recurrence Plots}
-%
-%
-%$\mathbf{R}^{m}_{i,j} (\epsilon)$ is two dimensional plot of $N \times N$ square matrix
-%defined by
-%
-%%%********************************[EQUATION]************************************
-%\begin{equation*}
-%\mathbf{R}^{m}_{i,j} (\epsilon) = 
-%\Theta ( \epsilon_i - \Vert X(i) - X(j) \Vert ), 
-%\quad i,j=1,\dots,N
-%\end{equation*}
-%%%********************************[EQUATION]************************************
-%
-%where $N$ is the number of considered reconstructed states of $X(i)$
-%($X(i) \in \mathbb{R}^m$), 
-%$\epsilon$ is a threshold distance, 
-%$ \Vert  \cdot \Vert$ a norm, 
-%and $\Theta( \cdot )$ is the Heaviside function.
-%
-%\end{frame}
-%}
-%
-%
-%
-%
-%\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{Marwan et al. 2007 in {\bf Physics Reports}}
-%
-%\begin{frame}{Recurrence Plot Patterns}
-%    \begin{figure}
-%        \includegraphicscopyright[width=\linewidth]{nonlinear-analyses/rpsp}{Figure is adapted from (Marwan et al. 2007)}
-%	\caption{Recurrence plots for (A) uniformly distributed noise,
-%		(B) super-positionet harmonic oscillation,
-%		(C) drift logistic map with a linear increase term, and
-%		(D) disrupted brownian motion.
-%		} 
-%   \end{figure}
-%	
-%\end{frame}
-%}
-%
-%
-%\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{Marwan and Webber, 2015}
-%
-%\begin{frame}{Recurrence Quantification Analysis (RQA)}
-%
-%\begin{description}
-%\item [ \textbf{REC} ] enumerates the black dots in the RP.
-%%%********************************[EQUATION]************************************
-%\begin{equation*}
-%	REC(\epsilon,N)= 
-%	\frac{1}{N^2 - N} \sum^{N}_{i \neq j = 1} 
-%	\mathbf{R}^{m}_{i,j}(\epsilon)
-%\end{equation*}
-%%%********************************[EQUATION]************************************
-%\item [ \textbf{DET} ] fraction of recurrence points that form diagonal lines. \\
-%			\textit{(interpreted as the predictability where, for example,
-%				periodic signals show longer diagonal lines 
-%				than chaotic ones.
-%				)}
-%%%********************************[EQUATION]************************************
-%\begin{equation*}
-%	DET=\frac{\sum^{N}_{l=d_{min}} l H_D{l} }{\sum^{N}_{i,j=1} 
-%	\mathbf{R}^{m}_{i,j}(\epsilon) }
-%\end{equation*}
-%%%********************************[EQUATION]************************************
-%
-%\end{description}
-%
-%
-%	
-%\end{frame}
-%}
-%
-%
-%
-%
-%
-%\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
+%% PUBLICATIONS
+%
+%%Accepted Conferences Publications
+%%
+%
+%
+%%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%\paper{
+%%Xochicale et al. 2018 in {\bf Poster Conferences at University of Birmingham} 
+%%}
+%%\begin{frame}{Quantifying Emotion and Movement Variability in HRI}
+%%    \begin{figure}
+%%        \includegraphicscopyright[width=1.0\linewidth]{experiment/emov}{}
+%%   \end{figure}
+%%\end{frame}
+%%}
+%%
+%%
+%
+%
+%%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%\paper{Takens 1981 in {\bf Dynamical Systems and Turbulence}; 
+%%Casdagli 1991 in {\bf Physica D};
+%%Frank et al. 2010 in {\bf AAAI Conference on Artificial Intelligence};
+%%Sama et al. 2013 in {\bf Neurocomputing};
+%%Cao 1997 in {\bf Physica D};
+%%Kabiraj et al. 2012 in {\bf Chaos};
+%%Eckmann et al. 1987 in {\bf Europhysics Letters}
+%%}
+%%
+%%\begin{frame}{Recurrence Quantification Analysis}
+%%    \begin{figure}
+%%        \includegraphicscopyright[width=1.2\linewidth]{nonlinear-analyses/main-method}
+%%	{Figure is adapted from Xochicale 2018 in Preprint PhD thesis.} 
+%%	%\caption{Figure adapted from (Casdagli et al. 1991; Quintana-Duque (2012); Uzal et al. 2011)} 
+%%   \end{figure}
+%%	
+%%\end{frame}
+%%}
+%%
+%
+%
+%%
+%%\subsection{SSRT and UTDE}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%\paper{Takens F 1981 in {\bf Dynamical Systems and Turbulence}; Casdagli 1991 in {\bf Physica D}}
+%%
+%%\begin{frame}{Takens's Theorem}
+%%
+%%\LARGE
+%%%%********************************[EQUATION]************************************
+%%\begin{equation*}\label{eq:measurement}
+%%	s(t)= f^{t}[ s(0) ]
+%%	%x(t)=h[ f^{t}s(0)  ]
+%%\end{equation*}
+%%%%********************************[EQUATION]************************************
+%%%\vspace{0.1mm}
+%%\normalsize
+%%\begin{itemize}
+%%\item $s$ represents a trajectory which evolves in an unknown $d-$dimensional manifold $M$
+%%\item $f^t$ is a evolution function with time evolution $t$
+%%\end{itemize}
+%%Then 
+%%\LARGE
+%%%%********************************[EQUATION]************************************
+%%\begin{equation*}\label{eq:measurement}
+%%	x(t)=h[s(t)]
+%%\end{equation*}
+%%%%********************************[EQUATION]************************************
+%%%\vspace{0.1mm}
+%%\normalsize
+%%\begin{itemize}
+%%\item $x(t)$ scalar time series in $\mathbb{R}$ 
+%%\item $h$ is a function defined on the trajectory $s(t)$
+%%\end{itemize}
+%%
+%%
+%%%where $h$ is a function, $h: M \rightarrow \mathbb{R}$, defined
+%%%on the evolution function $f^t$ amd
+%%	
+%%\end{frame}
+%%}
+%%
+%%
+%%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%\paper{Takens F 1981 in {\bf Dynamical Systems and Turbulence}; Casdagli 1991 in {\bf Physica D}}
+%%
+%%\begin{frame}{State Space Reconstruction Theorem}
+%%
+%%Uniform time-delay embedding matrix
+%%$\boldsymbol{X}(t) = \{ x(t), x(t-\tau) , ...,x(t - (m-1)\tau  ) \}$ 
+%%defines a map $\Phi: M \rightarrow \mathbb{R}^m$ such that 
+%%\begin{eqnarray*}
+%%\boldsymbol{X}(t) = \Phi(s(t))$
+%%\end{eqnarray*}
+%%where $\Phi$ is a diffeomorphic map whenever $\tau > 0$ 
+%%and $m > 2d_{box}$ and $d_{box}$ is the box-counting dimension of $M$.
+%%
+%%\end{frame}
+%%}
+%%
+%%
+%%
+%%
+%%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%\paper{Frank et al. 2010 in {\bf AAAI Conference on Artificial Intelligence} and Sama et al. 2013 in {\bf Neurocomputing} }
+%%
+%%\begin{frame}{Uniform Time-Delay Embedding (UTDE)}
+%%
+%%For a given discrete time series $\{x_n\}_{n=1}^{N} = [x_1 , x_2, \dots, x_N]$
+%%of sample length $N$, a uniform time-delay embedding matrix is defined as 
+%%\begin{eqnarray*}
+%% \mathbf{X}^{m}_{\tau}
+%%  = \begin{pmatrix} \nonumber
+%%      \tilde{x}_n  & \\
+%%      \tilde{x}_{n-\tau}  & \\
+%%      \vdots  &  \\
+%%      \tilde{x}_{n-(m-1)\tau} & \\
+%%      \end{pmatrix}^T
+%%\end{eqnarray*}
+%%where $m$ is the \textbf{embedding dimension}  and  $\tau$ is the \textbf{ embedding delay}.
+%%
+%%
+%%The sample length for $\tilde{x}(n-i\tau)$, where $0 \leq i \leq (m-1)$, is $N-(m-1)\tau$,
+%%and the dimensions of $\mathbf{X}^{m}_{\tau}$ are ($m$,$(N-(m-1)\tau)$).
+%%
+%%\end{frame}
+%%}
+%%
+%%
+%%\subsection{Estimation of Embedding Parameters}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%\paper{Cao L. 1997 in {\bf Physica D}; Kabiraj et al. 2012 in {\bf Chaos}}
+%%
+%%\begin{frame}{Estimation of Embedding Parameters }
+%%
+%%\begin{block}{False Nearest Neighbours (FNN) for $m$}
+%%Unfold the attractor (i.e. evolving trajectories
+%%in a state space).
+%%\end{block}
+%%
+%%\begin{block}{Average Mutual Information (AMI) for $\tau$}
+%%Maximize the information in the RSSs.
+%%\end{block}
+%%	
+%%\end{frame}
+%%}
+%%
+%%
+%%
+%%\subsection{FNN and AMI}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%%\paper{Xochicale M 2018, {\bf PhD thesis}}
+%%
+%%\begin{frame}{False Nearest Neighbours (FNN) for embedding dimension}
+%%    \begin{figure}
+%%        \centering
+%%        \includegraphicscopyright[width=0.9\linewidth]{nonlinear-analyses/cao}{
+%%	Figure is adapted from Cao L 1997 in {\bf Physica D}}
+%%	\caption{(A,B) $E_1(m)$ and (C, D) $E_2(m)$ values for (E) chaotic 
+%%		and (F) random time series} 
+%%   \end{figure}
+%%	
+%%\end{frame}
+%%}
+%%
+%%
+%%
+%%\subsection{Estimation of Embedding Parameters}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%\paper{Cao L. 1997 in {\bf Physica D}}
+%%
+%%\begin{frame}{Estimation of Embedding Parameters }
+%%
+%%\begin{block}{False Nearest Neighbours (FNN)}
+%%\begin{equation*}
+%%E(m) &= \frac{1}{N-m\tau} \sum_{i=1}^{N-m\tau} 
+%%       \frac{ || \boldsymbol{X}_i(m+1) - \boldsymbol{X}_{n(i,m)}(m+1) || }
+%%            { || \boldsymbol{X}_i(m) - \boldsymbol{X}_{n(i,m)}(m) ||  } 
+%%\end{equation*}
+%%\end{block}
+%%
+%%\begin{block}{ $E_1(m)$ and $E_2(m)$ }
+%%\begin{equation*}
+%%E_1(m) = \frac{ E(m+1) } { E(m)} \quad 
+%%E_2(m) = \frac{ E^* (m+1) } { E^*(m)}
+%%\end{equation*}
+%%\end{block}
+%%
+%%
+%%
+%%
+%%	
+%%\end{frame}
+%%}
+%%
+%%
+%%
+%%
+%%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%
+%%\begin{frame}{Average Mutual Information (AMI) for embedding delay}
+%%    \begin{figure}
+%%        \centering
+%%        \includegraphicscopyright[width=0.7\linewidth]{nonlinear-analyses/ami}
+%%	{Figure is adapted from Kabiraj et al. 2012 in {\bf Chaos}}
+%%	\caption{(A, B) AMI values for (C) chaotic and (D) noise time series.} 
+%%   \end{figure}
+%%	
+%%\end{frame}
+%%}
+%%
+%%
+%%
+%%
+%%
+%%\subsection{Estimation of Embedding Parameters}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%\paper{Kabiraj et al. 2012 in {\bf Chaos}}
+%%
+%%\begin{frame}{Estimation of Embedding Parameters }
+%%
+%%\begin{block}{Average Mutual Information (ANN)}
+%%\begin{equation*}
+%%I(\tau) = \sum_{i,j}^N p_{ij} log_2 \frac{ p_{ij} }{ p_i p_j }.
+%%\end{equation*}
+%%\end{block}
+%%
+%%\end{frame}
+%%}
+%%
+%%
+%%
+%%
+%%
+%%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%\paper{Eckmann et al. 1987 in {\bf Europhysics Letters}}
+%%
+%%\begin{frame}{Recurrence Plot}
+%%    \begin{figure}
+%%        \includegraphicscopyright[width=1.0\linewidth]{nonlinear-analyses/rp}
+%%		{Figure is adapted from (Marwan et al. 2007)}
+%%	\caption{(A) State space for Lorenz systems, and 
+%%		(B) Recurrence plot with embeddings ($m=1$, $\tau=1$) and $\epsilon=5$} 
+%%   \end{figure}
+%%
+%%\end{frame}
+%%}
+%%
+%%
+%%
+%%\subsection{RP and RQA}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%\paper{Eckmann et al. 1987 in {\bf Europhysics Letters}}
+%%
+%%\begin{frame}{Recurrence Plots}
+%%
+%%
+%%$\mathbf{R}^{m}_{i,j} (\epsilon)$ is two dimensional plot of $N \times N$ square matrix
+%%defined by
+%%
+%%%%********************************[EQUATION]************************************
+%%\begin{equation*}
+%%\mathbf{R}^{m}_{i,j} (\epsilon) = 
+%%\Theta ( \epsilon_i - \Vert X(i) - X(j) \Vert ), 
+%%\quad i,j=1,\dots,N
+%%\end{equation*}
+%%%%********************************[EQUATION]************************************
+%%
+%%where $N$ is the number of considered reconstructed states of $X(i)$
+%%($X(i) \in \mathbb{R}^m$), 
+%%$\epsilon$ is a threshold distance, 
+%%$ \Vert  \cdot \Vert$ a norm, 
+%%and $\Theta( \cdot )$ is the Heaviside function.
+%%
+%%\end{frame}
+%%}
+%%
+%%
+%%
+%%
+%%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
 %%\paper{Marwan et al. 2007 in {\bf Physics Reports}}
-%\paper{Marwan and Webber, 2015}
+%%
+%%\begin{frame}{Recurrence Plot Patterns}
+%%    \begin{figure}
+%%        \includegraphicscopyright[width=\linewidth]{nonlinear-analyses/rpsp}{Figure is adapted from (Marwan et al. 2007)}
+%%	\caption{Recurrence plots for (A) uniformly distributed noise,
+%%		(B) super-positionet harmonic oscillation,
+%%		(C) drift logistic map with a linear increase term, and
+%%		(D) disrupted brownian motion.
+%%		} 
+%%   \end{figure}
+%%	
+%%\end{frame}
+%%}
+%%
+%%
+%%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%\paper{Marwan and Webber, 2015}
+%%
+%%\begin{frame}{Recurrence Quantification Analysis (RQA)}
+%%
+%%\begin{description}
+%%\item [ \textbf{REC} ] enumerates the black dots in the RP.
+%%%%********************************[EQUATION]************************************
+%%\begin{equation*}
+%%	REC(\epsilon,N)= 
+%%	\frac{1}{N^2 - N} \sum^{N}_{i \neq j = 1} 
+%%	\mathbf{R}^{m}_{i,j}(\epsilon)
+%%\end{equation*}
+%%%%********************************[EQUATION]************************************
+%%\item [ \textbf{DET} ] fraction of recurrence points that form diagonal lines. \\
+%%			\textit{(interpreted as the predictability where, for example,
+%%				periodic signals show longer diagonal lines 
+%%				than chaotic ones.
+%%				)}
+%%%%********************************[EQUATION]************************************
+%%\begin{equation*}
+%%	DET=\frac{\sum^{N}_{l=d_{min}} l H_D{l} }{\sum^{N}_{i,j=1} 
+%%	\mathbf{R}^{m}_{i,j}(\epsilon) }
+%%\end{equation*}
+%%%%********************************[EQUATION]************************************
+%%
+%%\end{description}
+%%
+%%
+%%	
+%%\end{frame}
+%%}
+%%
+%%
+%%
+%%
+%%
+%%\subsection{}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%{
+%%%\paper{Marwan et al. 2007 in {\bf Physics Reports}}
+%%\paper{Marwan and Webber, 2015}
+%%
+%%\begin{frame}{Recurrence Quantification Analysis (RQA)}
+%%
+%%\begin{description}
+%%\item [ \textbf{RATIO} ] is the radio of DET to REC. \\
+%%			\textit{(useful to discover dynamic transitions)}.
+%%\item [ \textbf{ENTR} ] Shannon entropy of the frequency distribution of the 
+%%			diagonal line lengths.
+%%			\textit{(useful to represent the complexity of the 
+%%				structure of the time series)}
+%%%%********************************[EQUATION]************************************
+%%\begin{equation*}
+%%	ENT= - \sum^{N}_{l=d_{min}} p(l) ln p(l),
+%%\end{equation*}
+%%%%********************************[EQUATION]************************************
+%%where 
+%%%%********************************[EQUATION]************************************
+%%\begin{equation*}
+%%	p(l)=\frac{ H_D(l) }{ \sum^{N}_{ l=d_{min} } H_D(l) }
+%%\end{equation*}
+%%%%********************************[EQUATION]************************************
+%%
+%%\end{description}
+%%
+%%
+%%	
+%%\end{frame}
+%%}
+%%
+%%
+%%
 %
-%\begin{frame}{Recurrence Quantification Analysis (RQA)}
 %
-%\begin{description}
-%\item [ \textbf{RATIO} ] is the radio of DET to REC. \\
-%			\textit{(useful to discover dynamic transitions)}.
-%\item [ \textbf{ENTR} ] Shannon entropy of the frequency distribution of the 
-%			diagonal line lengths.
-%			\textit{(useful to represent the complexity of the 
-%				structure of the time series)}
-%%%********************************[EQUATION]************************************
-%\begin{equation*}
-%	ENT= - \sum^{N}_{l=d_{min}} p(l) ln p(l),
-%\end{equation*}
-%%%********************************[EQUATION]************************************
-%where 
-%%%********************************[EQUATION]************************************
-%\begin{equation*}
-%	p(l)=\frac{ H_D(l) }{ \sum^{N}_{ l=d_{min} } H_D(l) }
-%\end{equation*}
-%%%********************************[EQUATION]************************************
-%
-%\end{description}
-%
-%
-%	
-%\end{frame}
-%}
-%
-%
-%
-
-
