--- a/slides/tex-files/research-projects.tex
+++ b/slides/tex-files/research-projects.tex
@@ -52,7 +52,7 @@ Xochicale and Baber 2018 in {\bf Consortium of European Research on Emotion}
 \paper{
 Xochicale 2019 in {\bf Symposium on Machine Learning and Dynamical Systems} 
 }
-\begin{frame}{Dynamic Facial Expressions with Shannon Entropy in HRI (2019-ongoing)}
+\begin{frame}{Dynamic Facial Expressions with Shannon Entropy (2019-ongoing)}
     \begin{figure}
         \includegraphicscopyright[width=0.95\linewidth]{projects/dfe}{}
    \end{figure}
@@ -61,60 +61,3 @@ Xochicale 2019 in {\bf Symposium on Machine Learning and Dynamical Systems}
 
 
 
-
-
-%
-%
-%\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%\paper{
-%Stergiou et al. 2006 in {\bf Neurologic Physical Therapy} 
-%Stergiou and Decker 2011 in {\bf Human Movement Science}}
-%\begin{frame}{Modelling Movement Variability}
-%    \begin{figure}
-%        \includegraphicscopyright[width=0.9\linewidth]{stergiou2006/drawing}{}
-%	\caption{Theoretical Model of Optimal Movement Variability} 
-%   \end{figure}
-%\end{frame}
-%}
-%
-%
-%
-%
-%
-%\subsection{}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%{
-%{
-%\paper{
-%Xochicale 2018 in {\bf Preprint PhD thesis}
-%}
-%\begin{frame}{Nonlinear Analyses}
-%
-%%Entropy measures to quantify regularity and complexity of time series.
-%%"Is there a best tool to measure variability?" (Caballero et al. 2014, p. 67)
-%
-%There is no best tool to measure MV and unification of tools is still
-%an open question (Caballero et al. 2014; Wijnants et al. 2009)
-%which led me (i) to explore different nonlinear analyses 
-%to measure MV and (ii) to understand its strengths and weaknesses. 
-%
-%\begin{itemize}
-%	\item Approximate Entropy (Pincus 1991, 1995)
-%	\item Sample Entropy (Richman and Moorman, 2000)
-%	\item Multiscale Entropy (Costa et al., 2002)
-%	\item Detrended Fluctation Analysis (Peng et al., 1995)
-%	\item Largest Lyapunov exponent (Stergiou, 2016)
-%	\item Recurrence Quantification Analysis (Zbilut and Webber et al., 1992)
-%\end{itemize}
-%
-%
-%\end{frame}
-%}
-%
-%
-%
-%
-%
-%
