--- a/slides/tex-files/conclusions.tex
+++ b/slides/tex-files/conclusions.tex
@@ -7,18 +7,19 @@
 
 \begin{itemize}
 	\item What to quantify in movement variability? \\
-	\textit{Complexity based on the degrees of freedom of a person,
-	to perform a task in defined environment}
+	\textit{Complexity of movement based on the degrees of freedom of a person
+	performing a certain task in a defined environment.}
 
 	\item Which methods of nonlinear analysis are appropriate to quantify movement and
-	How methods of nonlinear analysis are affected by real-world time series data ?\\
-	\textit{Measurements of Entropy using 3D surface plots of RQA 
+	how methods of nonlinear analysis are affected by real-world time series data ?\\
+	\textit{Shannon entropy using 3D surface plots of RQA 
 	appear to be robust to real-word data (i.e. different time series
-	structures, window length size and levels of smoothness )}
+	structures, window length size and levels of smoothness).}
 %	\url{https://arxiv.org/abs/1810.09249}}
 
 	\item What are these techniques good for?\\
-	\textit{Quantification of skill learning, 
+	\textit{Quantification of skill learning in HRI, 
+	dynamics of facial expressions, 
 	fetal behavioral development, or
 	nonlinear biomedical signal processing.}
 \end{itemize}
